--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,34 +3,38 @@ menu.aj-menu.title = Welcome
 menu.aj-menu.message = Welcome to Axthrix this mod is still in development so expect bugs.
 
 ## Status Effects
-status.vindicationI.name = Vindication I
-status.vindicationI.description = Set me
-status.vindicationII.name = Vindication II
-status.vindicationII.description = Set me
-status.vindicationIII.name = Vindication III
-status.vindicationIII.description = Set me
-status.precludedX.name = Precluded X
-status.precludedX.description = Redirect all unit energy to attacking.
-status.precludedA.name = Precluded A
-status.precludedA.description = Redirect all unit energy to building and movement.
+status.aj-vindicationI.name = Vindication I
+status.aj-vindicationI.description = Set me
+status.aj-vindicationII.name = Vindication II
+status.aj-vindicationII.description = Set me
+status.aj-vindicationIII.name = Vindication III
+status.aj-vindicationIII.description = Set me
+status.aj-precludedX.name = Precluded X
+status.aj-precludedX.description = Redirect all unit energy to attacking.
+status.aj-precludedA.name = Precluded A
+status.aj-precludedA.description = Redirect all unit energy to building and movement.
 
 ## Units
-units.barrier.name = Barrier
-units.barrier.description = Set me
-units.blockade.name = Blockade
-units.blockade.description = Set me
-units.palisade.name = Palisade
-units.palisade.description = Set me
-units.parapet.name = Parapet
-units.parapet.description = Set me
-units.impediment.name = Impediment
-units.impediment.description = Set me
+units.aj-barrier.name = Barrier
+units.aj-barrier.description = Set me
+units.aj-blockade.name = Blockade
+units.aj-blockade.description = Set me
+units.aj-palisade.name = Palisade
+units.aj-palisade.description = Set me
+units.aj-parapet.name = Parapet
+units.aj-parapet.description = Set me
+units.aj-impediment.name = Impediment
+units.aj-impediment.description = Set me
 
 ## Blocks
-blocks.kramola.name = Kramola
-blocks.kramola.description = Set me
-blocks.razdor.name = Razdor
-blocks.razdor.description = Set me
-blocks.smuta.name = Smuta
-blocks.smuta.description = Set me
-blocks.kisten.name = Kisten
+blocks.aj-kramola.name = Kramola
+blocks.aj-kramola.description = Set me
+blocks.aj-razdor.name = Razdor
+blocks.aj-razdor.description = Set me
+blocks.aj-smuta.name = Smuta
+blocks.aj-smuta.description = Set me
+blocks.aj-kisten.name = Kisten
+blocks.aj-fragmentation.name = Fragmentation
+blocks.aj-fragmentation.description = Set me
+blocks.aj-nado.name = Nado
+blocks.aj-nado.description = Set me
