--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -34,6 +34,7 @@ blocks.aj-razdor.description = Set me
 blocks.aj-smuta.name = Smuta
 blocks.aj-smuta.description = Set me
 blocks.aj-kisten.name = Kisten
+blocks.aj-kisten.description = Set me
 blocks.aj-fragmentation.name = Fragmentation
 blocks.aj-fragmentation.description = Set me
 blocks.aj-nado.name = Nado
