--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,14 +1,14 @@
 ## Menus
-menu.aj-menu.title = Welcome
+menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix this mod is still in development so expect bugs.
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
-status.aj-vindicationI.description = Set me
+status.aj-vindicationI.description = Increases health but lowers speed using nanobots
 status.aj-vindicationII.name = Vindication II
-status.aj-vindicationII.description = Set me
+status.aj-vindicationII.description =  Greatly increases health but lowers speed using nanobots
 status.aj-vindicationIII.name = Vindication III
-status.aj-vindicationIII.description = Set me
+status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
 status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
@@ -16,26 +16,26 @@ status.aj-precludedA.description = Redirect all unit energy to building and move
 
 ## Units
 units.aj-barrier.name = Barrier
-units.aj-barrier.description = Set me
+units.aj-barrier.description = protects allys
 units.aj-blockade.name = Blockade
-units.aj-blockade.description = Set me
+units.aj-blockade.description = fires waves of nanobots at eniemies and protects allys
 units.aj-palisade.name = Palisade
-units.aj-palisade.description = Set me
+units.aj-palisade.description = dispatches healer turrets and protects allys
 units.aj-parapet.name = Parapet
-units.aj-parapet.description = Set me
+units.aj-parapet.description = dispatches attack tuurest and healer turrets
 units.aj-impediment.name = Impediment
-units.aj-impediment.description = Set me
+units.aj-impediment.description = send barrenges of nano bot at eniemies
 
 ## Blocks
 blocks.aj-kramola.name = Kramola
-blocks.aj-kramola.description = Set me
+blocks.aj-kramola.description = A |RTM| Recursive Tracking Minigun T1
 blocks.aj-razdor.name = Razdor
-blocks.aj-razdor.description = Set me
+blocks.aj-razdor.description = A |RTM| Recursive Tracking Minigun T2
 blocks.aj-smuta.name = Smuta
-blocks.aj-smuta.description = Set me
+blocks.aj-smuta.description = A |RTM| Recursive Tracking Minigun T3
 blocks.aj-kisten.name = Kisten
-blocks.aj-kisten.description = Set me
+blocks.aj-kisten.description = Biblically Accurate Rocket Launcher
 blocks.aj-fragmentation.name = Fragmentation
-blocks.aj-fragmentation.description = Set me
+blocks.aj-fragmentation.description = A massive multi stage Shotgun
 blocks.aj-nado.name = Nado
-blocks.aj-nado.description = Set me
+blocks.aj-nado.description = WIP tornado thrower
