--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -18,13 +18,18 @@ status.aj-precludedA.description = Redirect all unit energy to building and move
 units.aj-barrier.name = Barrier
 units.aj-barrier.description = protects allys
 units.aj-blockade.name = Blockade
-units.aj-blockade.description = fires waves of nanobots at eniemies and protects allys
+units.aj-blockade.description = fires waves of nanobots at enemies and protects allys
 units.aj-palisade.name = Palisade
 units.aj-palisade.description = dispatches healer turrets and protects allys
 units.aj-parapet.name = Parapet
 units.aj-parapet.description = dispatches attack tuurest and healer turrets
 units.aj-impediment.name = Impediment
-units.aj-impediment.description = send barrenges of nano bot at eniemies
+units.aj-impediment.description = send barrenges of nano bot at enemies
+units.aj-assaulturret.name = Attack Turret
+units.aj-assaulturret.description = Attacks enemies with a energy autocannon
+units.aj-repairturret.name = Repair Turret
+units.aj-repairturret.description = Repairs allys and deals minor dammge to enemies
+
 
 ## Blocks
 blocks.aj-kramola.name = Kramola
