--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,6 +9,8 @@ status.aj-vindicationII.name = Vindication II
 status.aj-vindicationII.description =  Greatly increases health but lowers speed using nanobots
 status.aj-vindicationIII.name = Vindication III
 status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
+status.aj-nanodiverge.name = Nano Diverge
+status.aj-nanodiverge.description = Hostile nanobot attack your systems and remove suport structures
 status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
