--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -10,7 +10,7 @@ status.aj-vindicationII.description =  Greatly increases health but lowers speed
 status.aj-vindicationIII.name = Vindication III
 status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
 status.aj-nanodiverge.name = Nano Diverge
-status.aj-nanodiverge.description = Hostile nanobot attack your systems and remove suport structures
+status.aj-nanodiverge.description = Hostile nanobot attacks your systems and remove surport structures
 status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
