--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -20,17 +20,14 @@ status.aj-precludedA.description = Redirect all unit energy to building and move
 units.aj-barrier.name = Barrier
 units.aj-barrier.description = protects allys
 units.aj-blockade.name = Blockade
-units.aj-blockade.description = fires waves of nanobots at enemies and protects allys
+units.aj-blockade.description = fires nanobot missiles at enemies 
 units.aj-palisade.name = Palisade
-units.aj-palisade.description = dispatches healer turrets and protects allys
+units.aj-palisade.description = fires a wave of nanobots
 units.aj-parapet.name = Parapet
-units.aj-parapet.description = dispatches attack tuurest and healer turrets
+units.aj-parapet.description = fire a barage of nanobots and has a 4 shot grenade launcher
 units.aj-impediment.name = Impediment
-units.aj-impediment.description = send barrenges of nano bot at enemies
-units.aj-assaulturret.name = Attack Turret
-units.aj-assaulturret.description = Attacks enemies with a energy autocannon
-units.aj-repairturret.name = Repair Turret
-units.aj-repairturret.description = Repairs allys and deals minor dammge to enemies
+units.aj-impediment.description = creates a nanobot storm around itself a fires a large 6 shot grenade launcher
+
 
 
 ## Blocks
