--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,6 +2,9 @@
 menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix this mod is still in development so expect bugs.
 
+## Abilities
+ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[]
+
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
 status.aj-vindicationI.description = Increases health but lowers speed using nanobots
@@ -10,7 +13,7 @@ status.aj-vindicationII.description =  Greatly increases health but lowers speed
 status.aj-vindicationIII.name = Vindication III
 status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
 status.aj-nanodiverge.name = Nano Diverge
-status.aj-nanodiverge.description = Hostile nanobot attacks your systems and remove surport structures
+status.aj-nanodiverge.description = Hostile nanobot attacks your systems and remove support structures
 status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
@@ -20,7 +23,7 @@ status.aj-precludedA.description = Redirect all unit energy to building and move
 units.aj-barrier.name = Barrier
 units.aj-barrier.description = protects allys
 units.aj-blockade.name = Blockade
-units.aj-blockade.description = fires nanobot missiles at enemies 
+units.aj-blockade.description = fires nanobot missiles at enemies
 units.aj-palisade.name = Palisade
 units.aj-palisade.description = fires a wave of nanobots
 units.aj-parapet.name = Parapet
