Russian ans spanish languge support

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 ## Menus
 menu.aj-menu.title = Axthrix Welcomes You.
-menu.aj-menu.message = Welcome to Axthrix this mod is still in development so expect bugs.
+menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
 
 ## Abilities
 ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[]
@@ -13,7 +13,9 @@ status.aj-vindicationII.description =  Greatly increases health but lowers speed
 status.aj-vindicationIII.name = Vindication III
 status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
 status.aj-nanodiverge.name = Nano Diverge
-status.aj-nanodiverge.description = Hostile nanobot attacks your systems and remove support structures
+status.aj-nanodiverge.description = Hostile nanobots attacks your systems and removes support structures
+status.aj-vibration.name = Vibration
+status.aj-vibration.description = Your hull shakes due to massive sonic damage.
 status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
@@ -21,15 +23,15 @@ status.aj-precludedA.description = Redirect all unit energy to building and move
 
 ## Units
 units.aj-barrier.name = Barrier
-units.aj-barrier.description = protects allys
+units.aj-barrier.description = Protects allies.
 units.aj-blockade.name = Blockade
-units.aj-blockade.description = fires nanobot missiles at enemies
+units.aj-blockade.description = Fires nanobot missiles at enemies.
 units.aj-palisade.name = Palisade
-units.aj-palisade.description = fires a wave of nanobots
+units.aj-palisade.description = Fires a wave of nanobots.
 units.aj-parapet.name = Parapet
-units.aj-parapet.description = fire a barage of nanobots and has a 4 shot grenade launcher
+units.aj-parapet.description = Fires a burst of nanobots and has 2 trombone sonic shotguns.
 units.aj-impediment.name = Impediment
-units.aj-impediment.description = creates a nanobot storm around itself a fires a large 6 shot grenade launcher
+units.aj-impediment.description = Creates a nanobot storm around itself and has a lotus missile pod and tuba sonic shotguns.
 
 
 
