--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,7 +3,7 @@ menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
 
 ## Abilities
-ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[]
+ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[] Heal Percent: [accent]{0}[]
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
