--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,7 +3,7 @@ menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
 
 ## Abilities
-ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[] Heal Percent: [accent]{0}[]
+ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[]
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
@@ -22,29 +22,29 @@ status.aj-precludedA.name = Precluded A
 status.aj-precludedA.description = Redirect all unit energy to building and movement.
 
 ## Units
-units.aj-barrier.name = Barrier
-units.aj-barrier.description = Protects allies.
-units.aj-blockade.name = Blockade
-units.aj-blockade.description = Fires nanobot missiles at enemies.
-units.aj-palisade.name = Palisade
-units.aj-palisade.description = Fires a wave of nanobots.
-units.aj-parapet.name = Parapet
-units.aj-parapet.description = Fires a burst of nanobots and has 2 trombone sonic shotguns.
-units.aj-impediment.name = Impediment
-units.aj-impediment.description = Creates a nanobot storm around itself and has a lotus missile pod and tuba sonic shotguns.
+unit.aj-barrier.name = Barrier
+unit.aj-barrier.description = Protects allies.
+unit.aj-blockade.name = Blockade
+unit.aj-blockade.description = Fires nanobot missiles at enemies.
+unit.aj-palisade.name = Palisade
+unit.aj-palisade.description = Fires a wave of nanobots.
+unit.aj-parapet.name = Parapet
+unit.aj-parapet.description = Fires a burst of nanobots and has 2 trombone sonic shotguns.
+unit.aj-impediment.name = Impediment
+unit.aj-impediment.description = Creates a nanobot storm around itself and has a lotus missile pod and tuba sonic shotguns.
 
 
 
 ## Blocks
-blocks.aj-kramola.name = Kramola
-blocks.aj-kramola.description = A |RTM| Recursive Tracking Minigun T1
-blocks.aj-razdor.name = Razdor
-blocks.aj-razdor.description = A |RTM| Recursive Tracking Minigun T2
-blocks.aj-smuta.name = Smuta
-blocks.aj-smuta.description = A |RTM| Recursive Tracking Minigun T3
-blocks.aj-kisten.name = Kisten
-blocks.aj-kisten.description = Biblically Accurate Rocket Launcher
-blocks.aj-fragmentation.name = Fragmentation
-blocks.aj-fragmentation.description = A massive multi stage Shotgun
-blocks.aj-nado.name = Nado
-blocks.aj-nado.description = WIP tornado thrower
+block.aj-kramola.name = Kramola
+block.aj-kramola.description = A |RTM| Recursive Tracking Minigun T1
+block.aj-razdor.name = Razdor
+block.aj-razdor.description = A |RTM| Recursive Tracking Minigun T2
+block.aj-smuta.name = Smuta
+block.aj-smuta.description = A |RTM| Recursive Tracking Minigun T3
+block.aj-kisten.name = Kisten
+block.aj-kisten.description = Biblically Accurate Rocket Launcher
+block.aj-fragmentation.name = Fragmentation
+block.aj-fragmentation.description = A massive multi stage Shotgun
+block.aj-nado.name = Nado
+block.aj-nado.description = WIP tornado thrower
