--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -22,6 +22,7 @@ status.aj-precludedA.name = Precluded A
 status.aj-precludedA.description = Redirect all unit energy to building and movement.
 
 ## Units
+## barrier tree
 unit.aj-barrier.name = Barrier
 unit.aj-barrier.description = Protects allies.
 unit.aj-blockade.name = Blockade
@@ -32,7 +33,12 @@ unit.aj-parapet.name = Parapet
 unit.aj-parapet.description = Fires a burst of nanobots and has 2 trombone sonic shotguns.
 unit.aj-impediment.name = Impediment
 unit.aj-impediment.description = Creates a nanobot storm around itself and has a lotus missile pod and tuba sonic shotguns.
-
+## legends
+## yin and yang tree
+unit.aj-escalate.name = Escalate
+unit.aj-escalate.description = When Not shooting it gives Precluded A to itself and all allies in range.
+unit.aj-carillon.name = Carillon
+unit.aj-carillon.description = When shooting it gives Precluded X to itself and all allies in range.
 
 
 ## Blocks
