--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ allprojects{
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
+    implementation 'com.github.liplum:MultiCrafterLib:v1.7'
 
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
 }
