AxMulticrafter and turret changes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,7 @@
 ## Menus
 menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
+bar.aj-phases = Acceleration
 
 ## Abilities
 ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[]
@@ -24,7 +25,7 @@ status.aj-precludedA.description = Redirect all unit energy to building and move
 ## Units
 ## barrier tree
 unit.aj-barrier.name = Barrier
-unit.aj-barrier.description = Protects allies.
+unit.aj-barrier.description = A basic unit made to protect allies surrounding.
 unit.aj-blockade.name = Blockade
 unit.aj-blockade.description = Fires nanobot missiles at enemies.
 unit.aj-palisade.name = Palisade
