Hover tree ability and made abilities cleaner

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,7 +4,9 @@ menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so 
 bar.aj-phases = Acceleration
 
 ## Abilities
-ability.aj-nanobot-storm = Nanobot Storm: Damage: [accent]{0}[] Range: [accent]{1}[]
+ability.aj-nanobot-storm = [green]Nanobot Storm
+ability.aj-sstatusfield = Status Field
+ability.aj-heat-wave = [orange]HeatWave
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
