--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ allprojects{
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly 'com.github.MEEPofFaith:MindustryBlackHoleRenderer:v9'
     implementation 'com.github.liplum:MultiCrafterLib:v1.7'
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
 }
