Anagh Imped and faction changes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,12 +1,19 @@
 ## Menus
 menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
+## stats
 bar.aj-phases = Acceleration
+
+##teams
+team.axthrix = [#de9458]Axthrix
+team.raodon = [#202020]Raodon
+team.ikatusa = [#481257]Ikatusa
 
 ## Abilities
 ability.aj-nanobot-storm = [green]Nanobot Storm
 ability.aj-sstatusfield = Status Field
 ability.aj-heat-wave = [orange]HeatWave
+ability.aj-attraction-field = [purple]Contained Blackhole
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
