changes cuz wynuat

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -11,9 +11,11 @@ team.ikatusa = [#481257]Ikatusa
 
 ## Abilities
 ability.aj-nanobot-storm = [green]Nanobot Storm
+ability.aj-chain-heal = [green]Chain Heal
 ability.aj-sstatusfield = Status Field
 ability.aj-heat-wave = [orange]HeatWave
 ability.aj-attraction-field = [purple]Contained Blackhole
+ability.aj-stealth-field = [purple]Stealth Field
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
