Efim, and descriptions

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,6 +3,7 @@ menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
 ## stats
 bar.aj-phases = Acceleration
+stat.timetocloak = Recloaking Time
 
 ##teams
 team.axthrix = [#de9458]Axthrix
@@ -15,7 +16,6 @@ ability.aj-chain-heal = [green]Chain Heal
 ability.aj-sstatusfield = Status Field
 ability.aj-heat-wave = [orange]HeatWave
 ability.aj-attraction-field = [purple]Contained Blackhole
-ability.aj-stealth-field = [purple]Stealth Field
 
 ## Status Effects
 status.aj-vindicationI.name = Vindication I
