--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -4,6 +4,17 @@ menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so 
 ## stats
 bar.aj-phases = Acceleration
 stat.timetocloak = Recloaking Time
+stat.recipes = Recipes
+stat.producer = Produced By
+stat.produce = Used To Produce
+stat.used = Used By
+missing-research = [darkgray]<Research Required>
+requires = Requires:
+## Settings
+setting.aj-title = Axthrix Properties
+setting.aj-funni-disabled.name = Enable Funni
+setting.aj-funni-disabled.description = This can take a fair amount of data and impact startup time,\nEspecially with many mods enabled.\nRestart required to apply changes.
+
 
 ##teams
 team.axthrix = [#de9458]Axthrix
