New Apex And fixed coolant/minigun bug
also sum apexus changes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -3,6 +3,7 @@ menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
 ## stats
 bar.aj-phases = Acceleration
+bar.aj-heat = Heat
 stat.timetocloak = Recloaking Time
 stat.recipes = Recipes
 stat.producer = Produced By
