--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,15 +2,20 @@
 menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
 ## stats
-bar.aj-phases = Acceleration
-bar.aj-heat = Heat
-stat.timetocloak = Recloaking Time
-stat.recipes = Recipes
-stat.producer = Produced By
-stat.produce = Used To Produce
-stat.used = Used By
-missing-research = [darkgray]<Research Required>
-requires = Requires:
+bar.aj-phases =Acceleration [stat]({0}%)
+bar.aj-overheated =[scarlet]Overheated
+bar.aj-heat =Heat
+stat.timetocloak =Recloaking Time
+stat.maxbonus =Peak Firing Rate
+stat.timemax =Peak Firing Rate After
+stat.timeoverheat =Max Firing Time
+stat.timecool =Cooldown Time
+stat.recipes =Recipes
+stat.producer =Produced By
+stat.produce =Used To Produce
+stat.used =Used By
+missing-research =[darkgray]<Research Required>
+requires =Requires:
 ## Settings
 setting.aj-title = Axthrix Properties
 setting.aj-funni-disabled.name = Enable Funni
@@ -37,7 +42,7 @@ status.aj-vindicationII.description =  Greatly increases health but lowers speed
 status.aj-vindicationIII.name = Vindication III
 status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
 status.aj-nanodiverge.name = Nano Diverge
-status.aj-nanodiverge.description = Hostile nanobots attacks your systems and removes support structures
+status.aj-nanodiverge.description = Hostile nanobots attack your systems and remove support structures
 status.aj-vibration.name = Vibration
 status.aj-vibration.description = Your hull shakes due to massive sonic damage.
 status.aj-precludedX.name = Precluded X
