Asmot Kramola | done / Gravitation | WIP

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,9 +7,10 @@ bar.aj-overheated =[scarlet]Overheated
 bar.aj-heat =Heat
 stat.timetocloak =Recloaking Time
 stat.maxbonus =Peak Firing Rate
-stat.timemax =Peak Firing Rate After
+stat.timemax =Ramp Up Time
 stat.timeoverheat =Max Firing Time
 stat.timecool =Cooldown Time
+stat.faction = Faction
 stat.recipes =Recipes
 stat.producer =Produced By
 stat.produce =Used To Produce
@@ -24,7 +25,7 @@ setting.aj-funni-disabled.description = This can take a fair amount of data and 
 
 ##teams
 team.axthrix = [#de9458]Axthrix
-team.raodon = [#202020]Raodon
+team.raodon = [#595959]Raodon
 team.ikatusa = [#481257]Ikatusa
 
 ## Abilities
