--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,7 @@
 ## Menus
 menu.aj-menu.title = Axthrix Welcomes You.
 menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
+
 ## stats
 bar.aj-phases =Acceleration [stat]({0}%)
 bar.aj-overheated =[scarlet]Overheated
@@ -15,6 +16,19 @@ stat.recipes =Recipes
 stat.producer =Produced By
 stat.produce =Used To Produce
 stat.used =Used By
+stat.maxdamage = Max Damage
+stat.maxdamagemultiplier = Max Damage Multiplier
+stat.maxhealthmultiplier = Max Health Multiplier
+stat.maxspeedmultiplier = Max Speed Multiplier
+stat.maxreloadmultiplier = Max Reload Speed Multiplier
+stat.maxbuildspeedmultiplier = Max Build Speed Multiplier
+stat.dragmultiplier = Drag Multiplier
+stat.maxdragmultiplier = Max Drag Multiplier
+stat.maxcharges = Max Stack
+stat.maxhealing = Max Healing
+stat.newteam = Turns To
+stat.gray-repair-repair = Hp Restored
+stat.gray-repair-restore = Unrepairable Damage Removed
 missing-research =[darkgray]<Research Required>
 requires =Requires:
 ## Settings
@@ -36,16 +50,18 @@ ability.aj-heat-wave = [orange]HeatWave
 ability.aj-attraction-field = [purple]Contained Blackhole
 
 ## Status Effects
-status.aj-vindicationI.name = Vindication I
+status.aj-vindicationI.name =Vindication I
 status.aj-vindicationI.description = Increases health but lowers speed using nanobots
-status.aj-vindicationII.name = Vindication II
+status.aj-vindicationII.name =Vindication II
 status.aj-vindicationII.description =  Greatly increases health but lowers speed using nanobots
-status.aj-vindicationIII.name = Vindication III
+status.aj-vindicationIII.name =Vindication III
 status.aj-vindicationIII.description = Massively increases health but lowers speed using nanobots
-status.aj-nanodiverge.name = Nano Diverge
+status.aj-nanodiverge.name =Nano Diverge
 status.aj-nanodiverge.description = Hostile nanobots attack your systems and remove support structures
-status.aj-vibration.name = Vibration
-status.aj-vibration.description = Your hull shakes due to massive sonic damage.
+status.aj-unrepair.name =Unrepairable
+status.aj-unrepair.description =internals are unrepairable due to sonic damage.
+status.aj-gray-repair.name =Replenish
+status.aj-gray-repair.description =Removes unrepairable damage and restores hp.
 status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
