--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 ## Menus
 menu.aj-menu.title = Axthrix Welcomes You.
-menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs.
+menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so expect bugs. \n(this message can be disabled in settings)\n        \n(to get access to block go into effects tab in sandbox and place down faction icons once, and they will be in their catagories)
 
 ## stats
 bar.aj-phases =Acceleration [stat]({0}%)
@@ -35,8 +35,12 @@ requires =Requires:
 setting.aj-title = Axthrix Properties
 setting.aj-funni-disabled.name = Enable Funni
 setting.aj-funni-disabled.description = This can take a fair amount of data and impact startup time,\nEspecially with many mods enabled.\nRestart required to apply changes.
-
-
+setting.aj-message-debug.name = Show Starting Message
+setting.aj-message-debug.description = Whether to show the starting message dialog
+setting.aj-mount-power-debug.name = Show MountUnits Power Data
+setting.aj-mount-power-debug.description = Whether to show power data about amos tree in console
+setting.aj-mount-liquid-debug.name = Show MountUnits Liquid Data
+setting.aj-mount-liquid-debug.description = Whether to show liquid data about amos tree in console
 ##teams
 team.axthrix = [#de9458]Axthrix
 team.raodon = [#595959]Raodon
