Drone Fix & some stats

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -52,6 +52,7 @@ ability.aj-chain-heal = [green]Chain Heal
 ability.aj-sstatusfield = Status Field
 ability.aj-heat-wave = [orange]HeatWave
 ability.aj-attraction-field = [purple]Contained Blackhole
+ability.aj-dronespawn = [green]{0} Spawner
 
 ## Status Effects
 status.aj-vindicationI.name =Vindication I
