--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -71,5 +71,7 @@ status.aj-precludedX.name = Precluded X
 status.aj-precludedX.description = Redirect all unit energy to attacking.
 status.aj-precludedA.name = Precluded A
 status.aj-precludedA.description = Redirect all unit energy to building and movement.
+status.aj-gravical-slow.name = Gravitational Slowness
+status.aj-gravical-slow.description = Resonating Gravitational waves slow you down
 
 
