Live repository update
 (testing not recommended)
i need to push this to access them on a new computer

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,6 +6,8 @@ menu.aj-menu.message = Welcome to Axthrix, this mod is still in development, so 
 bar.aj-phases =Acceleration [stat]({0}%)
 bar.aj-overheated =[scarlet]Overheated
 bar.aj-heat =Heat
+bar.aj-rounds =[stat]({0} Rounds)
+bar.aj-reload = Reloading...
 stat.timetocloak =Recloaking Time
 stat.maxbonus =Peak Firing Rate
 stat.timemax =Ramp Up Time
