--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -64,6 +64,9 @@ setting.aj-mount-liquid-debug.name = Show MountUnits Liquid Data
 setting.aj-mount-liquid-debug.description = Whether to show liquid data about amos tree in console
 setting.aj-nado-3d-debug.name = Show Tornado 3d Cylinder
 setting.aj-nado-3d-debug.description = Whether to show a Cylinder Around Tornados
+setting.aj-nado-density.name = Tornado Effect Density
+setting.aj-nado-density.description = Reduces lag
+aj-nado-density.def = Density
 setting.aj-revolver-ammo.name = Show Revolver Ammo
 setting.aj-revolver-ammo.description = Whether to show An ammo counter Above revolver units/turrets when controlling them
 ## Teams
