--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -46,9 +46,15 @@ stat.emp-power =Power
 stat.emp-duration =Duration
 stat.minimum-to-discharge=Minimum to Discharge
 stat.static-shock =Discharges Energy at Powered Enemy blocks
-stat.gray-repair-repair = Hp Restored
-stat.gray-repair-restore = Unrepairable Damage Removed
-stat.time-to-grow = Growth Time
+stat.gray-repair-repair =Hp Restored
+stat.gray-repair-restore =Unrepairable Damage Removed
+stat.time-to-grow =Growth Time
+stat.damage-b=Damage
+stat.healing-f =Healing
+stat.booster-item =Boost Effect
+stat.booster-liquid =Boost Effect
+stat.bullet-effect =Bullets
+stat.dashes=
 missing-research =[darkgray]<Research Required>
 requires =Requires:
 ## Settings
